finish login,register api